@@ -13,6 +13,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #19132: The pprint module now supports compact mode.
+
 - Issue #19137: The pprint module now correctly formats instances of set and
   frozenset subclasses.
 
